--- a/meta/meta.Android/meta.Android.csproj
+++ b/meta/meta.Android/meta.Android.csproj
@@ -106,5 +106,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Elfimg.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\trashcanimg.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
