--- a/meta/meta.Android/meta.Android.csproj
+++ b/meta/meta.Android/meta.Android.csproj
@@ -110,4 +110,9 @@
     <AndroidResource Include="Resources\drawable\trashcanimg.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties TriggeredFromHotReload="False" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
